<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/todo_details"
            android:textSize="18sp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/id"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/setID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/titel1"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/setTitel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:fontFamily="sans-serif-black"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/beschreibung" />

        <TextView
            android:id="@+id/setBeschreibung"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/erledigt"
            android:fontFamily="sans-serif-black"
            android:layout_marginTop="8dp"/>

        <CheckBox
            android:id="@+id/setCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>



</ScrollView>

