<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".MainActivity">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_alignParentTop="true"
                android:gravity="center"
                android:text="@string/to_do_list"
                android:textSize="32sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:contentDescription="@string/logo"
                android:src="@drawable/logox"
                app:layout_constraintStart_toStartOf="@+id/title"
                app:layout_constraintTop_toTopOf="@+id/title" />
            <View
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#A6A6A6"
                android:layout_below="@id/textfeld1"
                app:layout_constraintBottom_toBottomOf="@id/title"/>


            <TextView
                android:id="@+id/textfeld1"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center"
                android:text="@string/meine_aufgaben"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@id/title"
                app:layout_constraintTop_toBottomOf="@+id/divider1" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#A6A6A6"
                android:layout_below="@id/textfeld1"
                app:layout_constraintBottom_toBottomOf="@id/textfeld1"/>

            <TextView
                android:id="@+id/empty_text_view1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/keine_aufgaben"
                android:gravity="center"
                android:visibility="gone"
                android:layout_centerInParent="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider2"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/myRecyclerView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/empty_text_view1" />

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#A6A6A6"
                android:layout_below="@id/textfeld1"
                app:layout_constraintBottom_toBottomOf="@id/myRecyclerView1"/>

            <TextView
                android:id="@+id/textfeld2"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center"
                android:text="@string/erledigte_aufgaben"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider3" />

            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#A6A6A6"
                android:layout_below="@id/textfeld2"
                app:layout_constraintBottom_toBottomOf="@id/textfeld2"/>

            <TextView
                android:id="@+id/empty_text_view2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/keine_erledigte_aufgaben"
                android:gravity="center"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:visibility="gone"
                android:layout_centerInParent="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider4"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/myRecyclerView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/empty_text_view2" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addAufgabeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/add_todo"
        android:src="@android:drawable/ic_input_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>